--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.1.5"
   },
   "browserList": [
-      "last 5 versions"
+    "last 5 versions"
   ]
-  
 }
